# mkdocs-pagetree-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  README.md  REUSE.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: deploy.yml  ghpages.yml  tests.yml
.reuse/: dep5
assets/: mkdocs_pagetree_plugin.js
children-demo/: index.html
children-demo/subpage_1/: index.html
children-demo/subsection_1/: index.html
children-demo/subsection_1/subsection_1_subpage_1/: index.html
docs/: i18npage.de.md  i18npage.en.md  index.md  somepage.md  toplevelpage.md
docs/children-demo/: index.md  subpage_1.md
docs/section_1/: index.md  subpage_1.md
docs/section_1/subsection_1/: index.md  subsection_1_subpage_1.md
docs/section_2/: index.md  pagetree.md  some-page.md
docs/section_2/subsection_2/: index.md  subpage_2.md
docs/section_3/: index.md
docs/section_3/subsection_1/: index.md
docs/section_3/subsection_1/subsubsection_1/: index.md
docs/siblings-demo/: index.md  pagetree.md
docs/siblings-demo/subsection_2/subsubsecction_2/: index.md
docs/subtree-demo/: deprecated_page.md  index.md
docs/subtree-demo/subsection_2/: index.md
mkdocs_pagetree_plugin/: plugin.py
mkdocs_pagetree_plugin/js/: mkdocs_pagetree_plugin.js
mkdocs_pagetree_plugin/templates/: nav_item.html.j2  nav_sub.html.j2  pagetree.html.j2
section_1/: index.html
section_1/subpage_1/: index.html
section_1/subsection_1/: index.html
section_1/subsection_1/subsection_1_subpage_1/: index.html
section_2/: index.html
section_2/pagetree/: index.html
section_2/some-page/: index.html
section_2/subsection_2/: index.html
section_2/subsection_2/subpage_2/: index.html
section_3/: index.html
section_3/subsection_1/: index.html
section_3/subsection_1/subsubsection_1/: index.html
section_3/subsection_2/: index.html
siblings-demo/: index.html
siblings-demo/pagetree/: index.html
siblings-demo/some-page/: index.html
siblings-demo/subsection_2/: index.html
siblings-demo/subsection_2/subsubsecction_2/: index.html
somepage/: index.html
src/mkdocs_pagetree_plugin/: plugin.py
src/mkdocs_pagetree_plugin/assets/: mkdocs_pagetree_plugin.css  mkdocs_pagetree_plugin.js
src/mkdocs_pagetree_plugin/css/: mkdocs_pagetree_plugin.css
src/mkdocs_pagetree_plugin/js/: mkdocs_pagetree_plugin.js
src/mkdocs_pagetree_plugin/templates/: nav_item.html.j2  nav_sub.html.j2  pagetree.html.j2
subtree-demo/: index.html
subtree-demo/deprecated_page/: index.html
subtree-demo/subsection_1/: index.html
subtree-demo/subsection_1/subsubsection_1/: index.html
subtree-demo/subsection_2/: index.html
tests/: test_plugin.py
toplevelpage/: index.html
