# SPDX-FileCopyrightText: 2023 Thomas Breitner
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-pagetree-plugin"
dynamic = ["version"]
description = "MkDocs plugin that allows you to display the page tree"
authors = [{name = "Thomas Breitner", email = "mail@thms.de"},]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Framework :: MkDocs",
    "Topic :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "mkdocs>=1.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "reuse",
    "ruff",
]

[project.entry-points."mkdocs.plugins"]
pagetree = "mkdocs_pagetree_plugin.plugin:PagetreePlugin"

[project.urls]
Homepage = "https://tombreit.github.io/mkdocs-pagetree-plugin/"
Documentation = "https://github.com/tombreit/mkdocs-pagetree-plugin/blob/main/README.md"
Repository = "https://github.com/tombreit/mkdocs-pagetree-plugin"
Issues = "https://github.com/tombreit/mkdocs-pagetree-plugin/issues"

[tool.setuptools]
license-files = ["LICENSES/*.txt"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
# Use setuptools autodiscover
# where = ["mkdocs_pagetree_plugin"]

[tool.ruff]
src = ["mkdocs_pagetree_plugin"]
target-version = "py311"
